# time-fmt

./: Cargo.toml  LICENSE-MIT  README.md  release.toml
.github/workflows/: ci.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: main.rs
src/: format.rs  lib.rs  parse.rs  util.rs
src/format/: spec_parser.rs  time_format_item.rs
src/parse/: desc_parser.rs  time_format_item.rs
