[package]
name = "time-fmt"
version = "0.1.2"
authors = ["mi_sawa <mi.sawa.1216+git@gmail.com>"]
edition = "2021"
description = "A strftime/strptime-like time formatter/parser for time-rs"
license = "MIT/Apache-2.0"
repository = "https://github.com/MiSawa/time-fmt"
readme = "README.md"
exclude = [".github"]

[features]
default = ["timezone_name"]
timezone_name = ["time-tz"]

[dependencies]
cfg-if = "1.0.0"
delegate = "0.6.2"
thiserror = "1.0.30"
time = { version = "0.3.7", features = ["parsing", "formatting"] }
time-tz = { version = "0.3.1", features = ["system"], optional = true }

[dev-dependencies]
time = { version = "0.3.7", features = ["large-dates", "macros"] }
