[package]
name = "time-fmt"
version = "0.3.8"
authors = ["mi_sawa <mi.sawa.1216+git@gmail.com>"]
edition = "2021"
description = "A strftime/strptime-like time formatter/parser for time-rs"
license = "MIT/Apache-2.0"
repository = "https://github.com/MiSawa/time-fmt"
readme = "README.md"
exclude = [".github", "release.toml"]

[features]
default = []

[dependencies]
thiserror = "1.0.30"
time = { version = "0.3.7", features = ["parsing", "formatting"] }

[dev-dependencies]
time = { version = "0.3.7", features = ["large-dates", "macros"] }
